--- a/src/componentes/header.css
+++ b/src/componentes/header.css
@@ -2,8 +2,16 @@ header {
     width: 100%;                        /* Ocupa toda a largura */
     background-color: #0072bb;          /* Azul padrão SENAI */
     color: white;                       /* Texto branco */
-    padding: 20px 0;                    /* Espaçamento interno */
+    padding: 10px 0;                    /* Espaçamento interno */
     font-size: 1.6em;                   /* Tamanho de texto maior */
     font-weight: bold;                  /* Texto em negrito */
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2); /* Sombra abaixo do cabeçalho */
+  }
+
+  .logo{
+    width: 30px;
+    height: 30px;
+    margin: 10px;
+    display: flex;
+    
   }
